fix: nav shift on smaller displays

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,6 +115,7 @@ main {
 }
 .top {
   padding: 0 20px;
+  height: 50px;
 }
 
 header,
@@ -143,7 +144,7 @@ header > div {
 
 .nav {
   background: var(--color-secondary);
-  min-height: var(--nav-h);
+  height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -299,10 +300,11 @@ main > div {
 .banner {
   padding: 0;
   background: blue;
+
 }
 .banner img {
   width: 100%;
-  height: 5vh;
+  height: 50px;
 }
 
 /*slider*/
